--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -16,12 +17,15 @@
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
     "express-fileupload": "^1.0.0",
+    "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
+    "middleware": "^1.0.0",
     "mongoose": "^5.4.1",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
+    "passport": "^0.4.0",
     "pug": "2.0.0-beta11",
     "req-flash": "0.0.3",
     "rethinkdb": "^2.3.3",
